compiler/testData/diagnostics/tests/inference/regressions/kt35943.kt
// DIAGNOSTICS: -UNUSED_EXPRESSION

class Inv<I>
fun <T> create(): Inv<T> = TODO()

fun main() {
    <!TYPE_MISMATCH!>if (true) create() else null<!>
}
